# jobfitr

./: .env.example  .gitignore  BUILD-PLAN.md  HANDOFF.md  README.md  pyproject.toml  web-harvest.example.yaml
bakeoff/: PLAN.md  README.md  __init__.py  client.py  judge.py  models.yaml  prompts.py  rank.py  run_applying.py  run_asking.py  score_claude_code.py  scoring.py  user_sim.py
bakeoff/cases/applying/: 001-zookeeper.json  002-remote-react-dev.json  003-vague-career-switcher.json  004-voice-rambler.json  005-nurse-nightshift.json  006-federal-analyst.json  007-trades-electrician.json  008-remote-anywhere-writer.json  009-teacher-relocating.json  010-overloaded-boosts.json  011-title-only.json  012-conflicting-remote.json  README.md
bakeoff/cases/asking/: 001-remote-react-dev.yaml  002-vague-career-switcher.yaml  003-nontech-zookeeper.yaml  004-voice-rambler.yaml
bakeoff/claude_code/: brief.md  opus.json  sonnet.json
bakeoff/results/: applying-2026-07-13.json  applying-2026-07-13.md  applying-2026-07-14.json  applying-2026-07-14.md  applying-claude-code-2026-07-13.json  applying-claude-code-2026-07-13.md  applying-claude-code-2026-07-14.json  applying-claude-code-2026-07-14.md
deploy/: Caddyfile  README.md  bootstrap.sh  jobfitr-evict.service  jobfitr-evict.timer  jobfitr-evict@.service  jobfitr-evict@.timer  jobfitr-harvest.service  jobfitr-harvest.timer  jobfitr-notify@.service  jobfitr-resolve.service  jobfitr-resolve.timer  jobfitr-web.service  tech-watchlist.json
deploy/slots/: Caddyfile.blue-green  README.md  deploy-slot.sh  flip.sh  harvest-active.sh  jobfitr-web@.service  resolve-active.sh  verify-slot.sh
design/: atmosphere-study.html  design-board-v1.html  design-board-v2.html
jobfitr/: __init__.py  chat.py  config_builder.py  live.py  resolve.py  server.py  snapshot.py  store.py
scripts/: dry_run.py
tests/: test_bakeoff.py  test_chat.py  test_live.py  test_store.py  test_web.py
web/: app.js  atmosphere.js  chat.js  index.html  style.css
